Re-enable listening on private runloop modes, but not in modal loops.

Bug: 726200, 602914, 640466
Change-Id: Idf769c1f830ccb3ddc67205acb9e86aac2ec0460